[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI_Elements/SummaryDisplay.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/tab_container_font.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.407843, 0.407843, 0.407843, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )
Label/fonts/font = ExtResource( 2 )
Label/styles/normal = SubResource( 1 )

[node name="SummaryDisplay" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 120.0
margin_right = -2.0
margin_bottom = -82.0
theme = SubResource( 2 )
color = Color( 0.410156, 0.410156, 0.410156, 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 1558.0
margin_bottom = 718.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 185.0
margin_bottom = 142.0
custom_constants/separation = 0

[node name="MainSummaryContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 185.0

[node name="MainSummaryColumnContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MainSummaryContainer"]
margin_right = 185.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 0 )
margin_right = 185.0
margin_bottom = 40.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 185.0
margin_bottom = 61.0
text = "Internal Standard Tabs"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 61.0
margin_right = 185.0
margin_bottom = 71.0
custom_constants/separation = 10

[node name="ISSummaryContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 185.0
margin_bottom = 71.0

[node name="ISSummaryColumnContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/ISSummaryContainer"]
margin_right = 185.0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 71.0
margin_right = 185.0
margin_bottom = 111.0
custom_constants/separation = 40

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 185.0
margin_bottom = 132.0
text = "Calibration Curve Tabs"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 132.0
margin_right = 185.0
margin_bottom = 142.0
custom_constants/separation = 10

[node name="CCSummaryContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 185.0
margin_bottom = 142.0

[node name="CCSummaryColumnContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/CCSummaryContainer"]
margin_right = 185.0
